--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ar_project
-description: "A new Flutter project."
-version: 1.0.0+1
+description: "Captures an image from Brilliant Labs Frame and sends it to a user-specified API for processing"
+version: 0.1.0
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -8,54 +8,33 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  permission_handler: ^11.3.1
+  provider: ^6.1.2
+  flutter_quick_video_encoder: ^1.7.2
+  flutter_blue_plus: ^1.34.5
   frame_ble: ^3.0.0
-  logger: ^2.5.0
-  simple_frame_app: ^0.0.1
-  image: ^4.3.0
-  sembast: ^3.8.5
+  path_provider: ^2.1.3
+  flutter_foreground_task: ^6.5.0
   frame_msg: ^2.0.0
-  path_provider: ^2.1.5
-  cupertino_icons: ^1.0.8
-  path: ^1.8.3
-  file_picker: ^10.1.7  # removed per previous workaround
-  frame_sdk: ^0.0.7
-  flutter_blue_plus: ^1.35.0
-  geolocator: ^14.0.0
-
-  logging: any
-  share_plus: any
-  http: any
-  http_parser: any
-  flutter_foreground_task: any
-  shared_preferences: any
-  archive: any
-  audio_session: any
-  flutter_dotenv: any
-  flutter_riverpod: any
-  noa: any
-  collection: any
-  just_audio: any
-  url_launcher: any
-  webview_flutter: any
-  saver_gallery: any
-  uuid: any
-  geocoding: any
-  google_sign_in: any
-  sign_in_with_apple: any
-assets:
-  - assets/lua/
-
-dependency_overrides:
-  meta: ^1.11.0
-  collection: ^1.17.1
-  archive: ^4.0.2
+  http: ^1.2.2
+  http_parser: ^4.0.2
+  image: ^4.3.0
+  logging: ^1.3.0
+  share_plus: ^10.1.0
+  shared_preferences: ^2.3.2
+  simple_frame_app: ^7.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.0
 
-  logging: any
 flutter:
   uses-material-design: true
+  assets:
+    - packages/frame_msg/lua/battery.min.lua
+    - packages/frame_msg/lua/camera.min.lua
+    - packages/frame_msg/lua/code.min.lua
+    - packages/frame_msg/lua/data.min.lua
+    - packages/frame_msg/lua/plain_text.min.lua
+    - packages/frame_msg/lua/imu.min.lua
+    - assets/frame_app.lua
